--- a/django_blog_project/django_blog_project/.gitignore
+++ b/django_blog_project/django_blog_project/.gitignore
@@ -1,1 +1,15 @@
+# Python bytecode files
+*.pyc
+*.pyo
+__pycache__/
+
+# Virtual environment directories
+venv/
+env/
+
+# IDE configuration files
+.idea/
+.vscode/
+
+# Environment variable files
 .env
